<resources>
    <string name="app_name">E-Zbooks</string>


    <string name="web_client_id">1076190784875-addt2eutd3i52sip50c3ird8s3inbup6.apps.googleusercontent.com</string>

    <string name="version">V 1.0</string>

    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="wishlist">Wishlist</string>
    <string name="order">Order</string>
    <string name="login">Login</string>
    <string name="logout">LogOut</string>
    <string name="settings">Settings</string>
    <string name="libry">My libry</string>
    <string name="navigation_drawer_open">Open Nave Drawer</string>
    <string name="navigation_drawer_close">close Nave Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">Login to Ez-Libry</string>
    <string name="frogot_password"><u>Frogot Password?</u></string>
    <string name="signup">SignUp to E-ZBooks</string>
</resources>