<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_main">
        <item
            android:id="@+id/side_nave_home"
            android:title="@string/home"
            android:icon="@drawable/home"
            android:checked="true"/>

        <item
            android:id="@+id/side_nave_profile"
            android:title="@string/profile"
            android:visible="false"
            android:icon="@drawable/profile" />

        <item
            android:id="@+id/side_nave_order"
            android:title="@string/order"
            android:visible="false"
            android:icon="@drawable/booked"/>

        <item
            android:id="@+id/side_nave_wishlist"
            android:title="@string/wishlist"
            android:visible="false"
            android:icon="@drawable/bookmark"/>
    </group>

    <group android:id="@+id/group_auth">
        <item
            android:id="@+id/side_nave_setings"
            android:title="@string/settings"
            android:icon="@drawable/settings"/>

        <item
            android:id="@+id/side_nave_login"
            android:title="@string/login"
            android:icon="@drawable/login"/>

        <item
            android:id="@+id/side_nave_logout"
            android:title="@string/logout"
            android:visible="false"
            android:icon="@drawable/exit"/>
    </group>



</menu>